[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/block.png" type="Texture" id=1]
[ext_resource path="res://scripts/door.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 22 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 16 )

[node name="door" type="Node2D" groups=[
"door",
]]
z_index = 10
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0.364706, 0.286275, 0.207843, 1 )
position = Vector2( 0, 0.0588962 )
scale = Vector2( 2.4, 1.3468 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 48, 0 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -48, 0 )
shape = SubResource( 2 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
